# RL2019-20

./: .gitignore  README.md  README_old.md  doc_tecnico.tex  setup.txt
src/: CMakeLists.txt  benchmarks.cpp  debugging.h  main.cpp  pseudo.txt
src/Arduino/: main.cpp  main.ino
src/Arduino/Arduino_comm/: Arduino_comm.cpp  Arduino_comm.h  example.ino
src/Arduino/Constants/: constants.cpp  constants.h
src/Arduino/IMU/: imu.cpp
src/Arduino/Motors/: Motors.cpp  Motors.h
src/Arduino/Stepper/: Stepper.cpp  Stepper.h
src/Braswell/: CMakeLists.txt  CMakeListsTemp.txt  main.cpp
src/Camera/: Camera.cpp  Camera.h
src/Constants/: Line_constants.h  Parameters.cpp  Parameters.h
src/Controller/: Controller.cpp  Controller.h
src/Data_analysis/: single_execution_time.cpp
src/Debugging/: Debugging.h
src/Graphics/: Graphics.cpp  Graphics.h
src/IMU/: imu.cpp  imu.h
src/Image/: Image.cpp  Image.h
src/Lib/: Outlines.h  Vertexes.h  cv_types.h  debugging.h  rmath.h
src/Line/: Line.cpp  Line.h  Rig.cpp  Rig.h
src/Log/: Log.cpp  Log.h
src/PID/: PID.cpp  PID.h
src/Parameters/: Parameters.cpp
src/ToF/: ToF.cpp
src/UDOO/: main.cpp
src/camera/: Camera.cpp  Camera.h
src/data_analysis/: pyvisual.py  run_log1.txt  run_log10.txt  run_log2.txt  run_log3.txt  run_log4.txt  run_log5.txt  run_log6.txt  run_log7.txt  run_log8.txt  run_log9.txt  stats.cpp
src/kNN/: a.out  allenamento.py  best_k_value.cpp  check.txt  k_values.txt
src/line_algorithm/: Image.cpp  Image.h  Line.h  Pixel.h  color_map.cpp  line_cases.py  parametri.h
src/simulator/: path_sim.py
(+82 files in other folders)
